# wireshark-extcap-wch-ble

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md
docs/dev/: README.md  project.md
docs/dev/project/: CHANGELOG.md  RELEASE_NOTES.md  sbom.spdx.json
packaging/: README.md  common.sh  verify.sh
packaging/arch/: PKGBUILD
packaging/debian/: build.sh  control.in  postinst  prerm
packaging/macos/: build.sh
packaging/windows/: build.sh  installer.nsi
scripts/: check-version.sh
src/: main.rs  pcap.rs  usb.rs
udev/: 60-wch-ble-analyzer.rules
