[package]
name = "wch-ble-extcap"
version = "0.1.0"
edition = "2021"
description = "Wireshark extcap plugin for the WCH BLE Analyzer Pro"
license = "GPL-3.0-only"

[[bin]]
name = "wch-ble-extcap"
path = "src/main.rs"

[dependencies]
rusb = "0.9"
# "termination" adds SIGTERM/SIGHUP to the default SIGINT handler.  Wireshark
# stops an extcap plugin with SIGTERM; without this the process dies by signal
# and Wireshark reports the non-zero exit as an error dialog.
ctrlc = { version = "3.4", features = ["termination"] }
