[package]
name = "wch-ble-extcap"
version = "0.1.1"
edition = "2021"
description = "Wireshark extcap plugin for the WCH BLE Analyzer Pro"
license = "GPL-3.0-only"

[[bin]]
name = "wch-ble-extcap"
path = "src/main.rs"

[features]
# Statically compile libusb from source instead of linking the system library.
# Packaging builds enable this so the produced binaries carry no libusb runtime
# dependency and cross-compiling needs only a cross C compiler -- no target-arch
# libusb dev package and no pkg-config sysroot.  (libudev is still linked for
# device enumeration on Linux.)
vendored = ["rusb/vendored"]

[dependencies]
rusb = "0.9"
# "termination" adds SIGTERM/SIGHUP to the default SIGINT handler.  Wireshark
# stops an extcap plugin with SIGTERM; without this the process dies by signal
# and Wireshark reports the non-zero exit as an error dialog.
ctrlc = { version = "3.4", features = ["termination"] }
